added images to listview
close #11
close #4

Finally added a image of main part of cover of newspaper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Das Parlament</string>
     <string name="title_home">Home</string>
     <string name="title_settings">Settings</string>
+    <string name="cover_image">Cover-Bild</string>
 </resources>
